--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,10 @@
         android:id="@+id/roll_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/roll"
         android:contentDescription="@string/roll"
+        android:backgroundTint="@color/grey"
+        android:textColor="@color/black"
         android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
